--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #aca9a9;
+  color: "#fff";
+  background: url("/public/stars-bg.jpeg") center center;
 }
 
 code {
