--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: "#fff";
-  background: url("/public/stars-bg.jpeg") center center;
+  background: #171616 center center;
 }
 
 code {
